--- a/client/src/component/play/styles.css
+++ b/client/src/component/play/styles.css
@@ -14,6 +14,18 @@ main .albums {
   box-sizing: border-box;
   width: 50%;
   height: 100%;
+  overflow: scroll;
+  background: #4a4a4b66;
+  border-right: 1px solid #323e4f;
+}
+
+main .album-all {
+  margin-left: 0;
+  padding: 0 50px;
+  box-sizing: border-box;
+  width: 50%;
+  height: 100%;
+  overflow: scroll;
   background: #4a4a4b66;
   border-right: 1px solid #323e4f;
 }
@@ -83,6 +95,7 @@ main .album {
 }
 
 .album-playlist {
+  margin-top: 20px;
   flex-grow: 1;
   overflow: scroll;
   box-sizing: border-box;
@@ -114,6 +127,7 @@ main .album {
 
 main .albums .grid img {
   /* max-height: 100%; */
+  height: 150px;
   max-width: 100%;
 }
 
@@ -122,9 +136,9 @@ main .albums .grid img {
 }
 
 .playlist-square .play-button {
-  position: absolute;
-  bottom: 5px;
-  right: 5px;
+  position: relative;
+  bottom: 100px;
+  left: 10px;
   background: ghostwhite;
   height: 30px;
   width: 30px;
