--- a/client/src/component/play/styles.css
+++ b/client/src/component/play/styles.css
@@ -12,7 +12,7 @@ main .albums {
   margin-left: 65px;
   padding: 0 50px 0 20px;
   box-sizing: border-box;
-  width: 60%;
+  width: 58%;
   height: 100%;
   overflow: scroll;
   background: #4a4a4b66;
@@ -49,7 +49,7 @@ main .album-all {
 }
 
 .details {
-  width: 40%;
+  width: 37%;
 }
 
 main h2 {
@@ -123,7 +123,7 @@ main .album {
 
 .album img {
   width: 200px;
-  /* height: 200px; */
+  height: 180px;
 }
 
 main .albums .grid img {
